--- a/bindings/cpp/tests/CMakeLists.txt
+++ b/bindings/cpp/tests/CMakeLists.txt
@@ -1,20 +1,16 @@
 # Find a testing framework (using simple assert-based tests if GTest not available)
 find_package(GTest QUIET)
 
-if(GTest_FOUND)
-    # Use Google Test if available
+# Prefer GTest when both found and the gtest source is present
+if(GTest_FOUND AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/test_ucra_cpp_gtest.cpp)
     add_executable(test_ucra_cpp test_ucra_cpp_gtest.cpp)
-    target_link_libraries(test_ucra_cpp
-        PRIVATE ucra_cpp GTest::gtest GTest::gtest_main)
-
-    add_test(NAME cpp_wrapper_test COMMAND test_ucra_cpp)
+    target_link_libraries(test_ucra_cpp PRIVATE ucra_cpp GTest::gtest GTest::gtest_main)
 else()
-    # Use simple assert-based tests
     add_executable(test_ucra_cpp test_ucra_cpp_simple.cpp)
     target_link_libraries(test_ucra_cpp PRIVATE ucra_cpp)
-
-    add_test(NAME cpp_wrapper_test COMMAND test_ucra_cpp)
 endif()
+
+add_test(NAME cpp_wrapper_test COMMAND test_ucra_cpp)
 
 # WORLD 엔진 사용 여부 (기본: OFF). WORLD를 통합하면 상위 CMake에서 ON으로 설정하세요.
 option(UCRA_WITH_WORLD "Build/Run tests that require WORLD engine" OFF)
