feat: Implement flag mapping functionality
- Added `ucra_flag_mapper` module for mapping legacy flags to standardized UCRA flags.
- Introduced `UCRA_FlagMapper` and related structures for handling mapping rules.
- Implemented JSON parsing for mapping rules and transformations.
- Enhanced `ucra_cli_to_render_config` to apply flag mappings if provided.
- Created tests for flag mapping functionality, including legacy flag parsing and mapping application.
- Added a Python-based CLI tool for defining and applying mapping rules.
- Included example mapping files and a schema for validation.
- Updated CMake configuration to include new source files and tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ target_compile_definitions(ucra INTERFACE UCRA_STATIC)
 
 # Main UCRA library implementation
 # Replace WORLD-dependent engine with pure C engine implementation
-set(UCRA_SOURCES src/ucra_manifest.c src/ucra_streaming.c src/ucra_engine.c)
+set(UCRA_SOURCES src/ucra_manifest.c src/ucra_streaming.c src/ucra_engine.c src/ucra_flag_mapper.c)
 
 # Static library (existing)
 add_library(ucra_impl STATIC ${UCRA_SOURCES})
